<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/isa_white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="100dp"
    android:layout_alignParentTop="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/lay_for_1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/olive_transparent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/player1"
            android:id="@+id/player1_name"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:maxLines="1"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_cross"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                />

    </LinearLayout>
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/lay_for_2"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/olive_transparent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/player2"
            android:id="@+id/player2_name"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:maxLines="1"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/img_zero"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/cell1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
                    <View android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_olive" />

            <ImageView
                android:id="@+id/cell2"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
                    <View android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@color/dark_olive" />

            <ImageView
                android:id="@+id/cell3"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/dark_olive" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/cell4"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
            <View android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/dark_olive" />

            <ImageView
                android:id="@+id/cell5"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
            <View android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/dark_olive" />

            <ImageView
                android:id="@+id/cell6"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/dark_olive" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/cell7"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
            <View android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/dark_olive" />

            <ImageView
                android:id="@+id/cell8"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
            <View android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/dark_olive" />

            <ImageView
                android:id="@+id/cell9"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/no_border_olive"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>